k8s/config/vault/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-infra
  hostnames:
    - "vault.3istor.com"
  rules:
    - backendRefs:
        - name: vault
          kind: Service
          port: 8200
